<resources>
    <string name="Ques1">Verne and Wells first names:</string>
    <string name="app_name">SF Quiz</string>
    <string name="question">Qestions # :</string>
    <string name="score">Points:</string>
    <string name="askquestion">Question:</string>
    <string name="ans1_1">Jules and Jim</string>
    <string name="ans1_2">Gabriel and George</string>
    <string name="ans1_3">J and H</string>
    <string name="ans1_4">Jules and Herbert</string>
    <string name="Ques2">Steven Cambell Hero\'s stories:</string>
    <string name="ans2_1">Hard Luck Hank: Robot Farts</string>
    <string name="ans2_2">Hard Luck Hank: Basketful Of Crap</string>
    <string name="ans2_3">Hard Luck Hank: Prince Of Socks</string>
    <string name="ans2_4">Rules for Glocken</string>
    <string name="Ques3">What novel won the 2006 Hugo award to Robert Charles Wilson?</string>
    <string name="ansprompt">Answer:</string>
    <string name="title">"Títle"</string>
    <string name="button">Submit</string>
    <string name="Ques4">Name of the vessel in \"Rendezvous with Rama\"</string>
    <string name="ans4_1">Ephitète</string>
    <string name="ans4_2">Honu</string>
    <string name="ans4_3">Endeavour</string>
    <string name="ans4_4">Rangatira</string>
    <string name="ans3_1">spin</string>

</resources>
