<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        style="@style/QuestionViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ques3"
        android:textColor="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            style="@style/QuestionViews"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:text="@string/ansprompt" />

        <EditText
            android:id="@+id/ans3_1_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingTop="8dp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="thirdQuestion"
        android:paddingTop="8dp"
        android:text="@string/button" />
</LinearLayout>