<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TitleViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question" />

                <TextView
                    android:id="@+id/answeredTextView"
                    style="@style/StatusViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

                <TextView
                    style="@style/TitleViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score" />

                <TextView
                    android:id="@+id/scoreTextView"
                    style="@style/StatusViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />

            </LinearLayout>

            <TextView
                style="@style/TitleViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/askquestion"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                style="@style/QuestionViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ques1"
                android:textColor="@color/colorAccent" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:theme="@style/AppTheme">

                <RadioButton
                    android:id="@+id/ans3RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="firstQuestion"
                    android:text="@string/ans1_3" />

                <RadioButton
                    android:id="@+id/ans1RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="firstQuestion"
                    android:text="@string/ans1_1" />

                <RadioButton
                    android:id="@+id/ans2RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="firstQuestion"
                    android:text="@string/ans1_2" />

                <RadioButton
                    android:id="@+id/ans4RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="firstQuestion"
                    android:text="@string/ans1_4" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>